# WORKING_EXAMPLES_LIBRARIES

./: HowToPico.txt  README.md
BMP280_pomeroni/: CMakeLists.txt  demo.cpp
BMP280_pomeroni/lib/: CMakeLists.txt  bme280.hpp
ESP82661S_sensorcc811/: script_receiver.ino
ESP82661S_sensorcc811/ccs811basic/: ccs811basic.ino
Exp_C_into_CPP/: CMakeLists.txt  main.cpp
Exp_C_into_CPP/ds3231/: ds3231.c
I2C_BMP180 _forum_SCANER/: CMakeLists.txt  test.c
Serial_Read/: CMakeLists.txt
Simple_Serial_Read/: CMakeLists.txt  Orig_serial_read.c  listener.ino  serial_read.c
TempSPI+LCD+CLOCK/: CMakeLists.txt  bmp280spi.c  w_station.c  w_station_orignix.c
TempSPI+LCD+CLOCK/ds1307/: CMakeLists.txt  ds1307.c  ds1307.h
WheaterEstation/: CMakeLists.txt  main.cpp
WheaterEstation/lib/: bme280.hpp  ds3231.c  ds3231.h  lcd_i2c.cpp  lcd_i2c.h  ws2812.c  ws2812.h
blink/: CMakeLists.txt
ccs811_circuitpy/: main.py
lcd_i2c_cpp (copy)/: CMakeLists.txt  lcd_i2c_quotes.cpp  lcd_i2c_test.cpp
pico-neopixel/: pico-neopixel.c
pico-rtc-DS1307MIO/c/: main.c
pico-rtc-DS1307MIO/c/ds3231/: ds3231.h
pico-rtc-DS1307MIO/python/: ds3231.py
ws2812/: CMakeLists.txt  ws2812.c
